<resources>
    <string name="app_name">Aplicativo Primeiro Estagio</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="realizar_login">Realizar Login</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="hint_login">Login...</string>
    <string name="hint_senha">Senha...</string>
    <string name="entrar">Entrar</string>
    <string name="label_salvar">Salvar</string>
    <string name="exibir_e_mail">Exibir e-mail?</string>
    <string name="exibir_amigos">Exibir amigos?</string>
    <string name="url_google">http://www.google.com</string>
</resources>
