<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_configuracoes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.erroronserver.aplicativoprimeiroestagio.ConfiguracoesActivity">


    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exibir_e_mail"
        android:checked="true"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exibir_amigos"
        android:checked="true"/>

    <Button
        android:id="@+id/btn_conf_salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_salvar"
        android:onClick="salvarConfi"/>

</LinearLayout>
